# execute-test

./: Cargo.toml  README.md  rustfmt.toml
src/: cmd.rs  config.rs  fosim.rs  lib.rs  main.rs
tests/: app.rs  cmd.rs  config.rs
