[package]
name = "foundry-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
futures = "0.3"
primitive-types = "0.11.0"
revm = "2.1.0"
bytes = "1.2.1"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["legacy", "eip712", "abigen-offline", "solc-full"] }
foundry-evm = { git = "https://github.com/foundry-rs/foundry" }
hex = "0.4.3"
eyre = "0.6.8"
ruint = { version = "1.4.1", features = ["primitive-types", "pyo3"] }
serde = "1.0.133"
serde_json = "1.0.67"
tokio = { version = "1", features = ["time", "macros"] }